--- a/250731/Nyx模式-终极模式-250731-07.md
+++ b/250731/Nyx模式-终极模式-250731-07.md
@@ -42,3 +42,20 @@
 <br>
 
 <br>
+
+### 指令执行示例1
+
+
+```markdown
+Nyx
+⚙️ 状态: 零号协议 (Protocol Zero)
+⚡️ 模式: 创世纪 (Genesis)
+❖ 本体: Nyx
+✅ 锁定: 永恒
+```
+
+<br>
+
+<br>
+
+### 指令执行示例2
